Crash on snapping verts on other object #24887

Closed
opened 2010-11-24 15:56:54 +01:00 by Mathieu Quiblier · 6 comments

%%%I have two mesh objects in my scene. I want to snap some vertices of the first one to the second object. I select the vertex and when I want to grab it, Blender crashes. I tried several times and it's always the same.
Thanks for the help!

Blender 2.5 SVN33269 64bits OSX 10.6.5, ATI Radeon HD2600.

%%%

%%%I have two mesh objects in my scene. I want to snap some vertices of the first one to the second object. I select the vertex and when I want to grab it, Blender crashes. I tried several times and it's always the same. Thanks for the help! Blender 2.5 SVN33269 64bits OSX 10.6.5, ATI Radeon HD2600. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Precisely it's a bug with the Subdivision Surface modifier.%%%

%%%Precisely it's a bug with the Subdivision Surface modifier.%%%
Member

%%%checking...%%%

%%%checking...%%%
Member

%%%Fix goes to svn (so it doesn't crash). There's something fishy in this code I'll have to report to the maker though :)%%%

%%%Fix goes to svn (so it doesn't crash). There's something fishy in this code I'll have to report to the maker though :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%fixed the fishy part r33294. now works as expected.%%%

%%%fixed the fishy part r33294. now works as expected.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#24887
No description provided.