bugfix [#24887] Crash on snapping verts on other object now the derived mesh and the editmesh will always have matching faces.